2007-08-05 11:20 dangelo

        * src/assemble.h: output final image without mask if
	  output format does not support alpha channels (JPG output)

2007-08-05 10:23 dangelo

        * src/enblend.cc, src/anneal.h, src/gpu.cc, src/gpu.h, src/mask.h:
	  Disable GPU support if GLEW is not available

        * src/vigra_impex: codec_manager.hxx, tiff.cxx, jpeg.cxx, png.cxx,
	  iccjpeg.c, iccjpeg.h:
	  Use config.h to determine if required libs are available.

        * src/vigra_impex/exr.cxx, src/vigra_impex/exr.hxx: added OpenEXR coded

	* configure.in: check for libjpeg and libtiff, added OpenEXR check

	* src/float_cast.h: use replacement rintf functions only if the
	  Microsoft Visual C compiler is used.

	* src/assemble.h, src/numerictraits.h: correct interpretation of
	  alpha channel when reading floating point images.

2007-08-04 12:22 dangelo
	* configure.in, m4/acx_pthread.m4 m4/ax_check_gl.m4,
	  m4/ax_check_glu.m4, m4/ax_check_glut.m4: proper
	  detection of OpenGL and related libraries on OSX
	  (JD Smith)
	  
	* src/anneal.h: isnan doesn't work on OSX, use std::isnan instead
	  (JD Smith)
	  
	* src/gpu.h, src/gpu.cc, src/enblend.cc: call glutInit(), use 0.0
	  instead of 0.0f in gpu code (JD Smith, Edouard Gomez, Pete Woods)
	  
2007-01-27 15:46  acmihal

	* README, doc/enblend.1: Updated README and man page for 3.0
	  release.

2007-01-27 15:17  acmihal

	* TODO, src/enblend.cc, src/mask.h, src/numerictraits.h: Enabled
	  all pixel types.  Bugfix for fixed-point overflow.  Fixed cost
	  image functor for unsigned pixel component types.

2007-01-27 15:17  acmihal

	* include/vigra/cachedfileimage.hxx: Removed minimum limit on image
	  lines per cache block.

2007-01-27 00:42  acmihal

	* src/: enblend.cc, mask.h, numerictraits.h: Bugfix for cost image
	  calculation for 16-bit images.

2007-01-26 23:05  acmihal

	* src/assemble.h: Changed assemble alpha threshold to max/2 < alpha
	  <= max.

2007-01-26 21:00  acmihal
